# SCARAP

./: .gitignore  README.md  environment.yml  progenomics  pyproject.toml  raccoon.py  requirements.txt
.github/workflows/: ci.yml  documentation.yml
docs/: citation.rst  conf.py  feedback.rst  getting-started.rst  index.rst  install.rst  license.rst  modules.rst  requirements.txt  scarap.rst
scripts/: construct_scg_matrix.R  select_genomes.R  select_scgs.R  train_hmmer_cutoffs.R
src/progenomics/: README.md  callers.py  checkers.py  computers.py  create_prefdb.sh  pan.py  progenomics.py  readerswriters.py  runners.py  tasks.py  tasks_composite.py  tasks_core.py  taskwrappers.py  update_prefdb.sh  utils.py
src/scarap/: README.md  __main__.py  callers.py  checkers.py  cli.py  computers.py  constants.py  helpers.py  module_wrappers.py  modules.py  pan.py  readerswriters.py  scarap.py  tasks_composite.py  tasks_core.py  taskwrappers.py  utils.py
test/: 01_pan.bats  02_pan_hierarchical.bats  03_build.bats  04_search.bats  05_check.bats  06_concatenate.bats  07_sample.bats  08_core.bats  README.md  environment_max.yml  environment_min.yml
