[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scarap"
version = "1.0.0"
authors = [
  { name = "Stijn Wittouck", email = "stijn.wittouck@uantwerpen.be" }
]
maintainers = [
  { name = "Stijn Wittouck", email = "stijn.wittouck@uantwerpen.be" },
  { name = "Tim Van Rillaer", email = "tim.vanrillaer@uantwerpen.be" }
]
description = "A toolkit for prokaryotic comparative genomics"
readme = "README.md"
requires-python = ">=3.6.7,<=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
    "wheel",
    "biopython>=1.67",
    "ete3>=3.1.1",
    "numpy>=1.16.5",
    "scipy>=1.4.1",
    "pandas"
]

[project.urls]
Homepage = "https://github.com/SWittouck/SCARAP"
Issues = "https://github.com/SWittouck/SCARAP/issues"

[project.scripts]
scarap = "scarap.__main__:main"

[tools.setuptools.packages.find]
where = "src"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "src"
