[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "scarap"
version = "1.0.1"
authors = [
  { name = "Stijn Wittouck", email = "stijn.wittouck@uantwerpen.be" }
]
maintainers = [
  { name = "Stijn Wittouck", email = "stijn.wittouck@uantwerpen.be" },
  { name = "Tim Van Rillaer", email = "tim.vanrillaer@uantwerpen.be" }
]
description = "A toolkit for prokaryotic comparative genomics"
readme = "README.md"
requires-python = ">=3.7,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent"
]
dependencies = [
    "wheel",
    "biopython>=1.79,<2",
    "ete3>=3.1,<4",
    "numpy>=1.18,<3",
    "scipy>=1.4,<2",
    "pandas>=1.3,<3"
]

[project.urls]
Homepage = "https://github.com/SWittouck/SCARAP"
Issues = "https://github.com/SWittouck/SCARAP/issues"

[project.scripts]
scarap = "scarap.cli:main"

[tools.setuptools.packages.find]
where = "src"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = "src"
